--- a/package.json
+++ b/package.json
@@ -9,22 +9,29 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@nextui-org/card": "^2.0.28",
+    "@nextui-org/input": "^2.1.21",
     "@nextui-org/react": "^2.3.6",
+    "@nextui-org/table": "^2.0.33",
     "axios": "^1.6.8",
     "framer-motion": "^11.1.7",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.51.4",
     "react-icons": "^5.1.0",
     "sweetalert": "^2.1.2",
+    "use-debounce": "^10.0.0",
     "zod": "^3.23.4"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "autoprefixer": "^10.4.19",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.3",
     "typescript": "^5"
   }
 }
