--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.4.0",
     "@nextui-org/card": "^2.0.28",
     "@nextui-org/input": "^2.1.21",
     "@nextui-org/react": "^2.3.6",
