--- a/package.json
+++ b/package.json
@@ -9,17 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@files-ui/react": "^1.2.4",
     "@hookform/resolvers": "^3.4.0",
     "@nextui-org/card": "^2.0.28",
     "@nextui-org/checkbox": "^2.1.2",
     "@nextui-org/date-picker": "^2.1.2",
     "@nextui-org/input": "^2.1.21",
     "@nextui-org/radio": "^2.1.2",
-    "@nextui-org/react": "^2.3.6",
+    "@nextui-org/react": "^2.4.6",
     "@nextui-org/select": "^2.2.2",
     "@nextui-org/table": "^2.0.33",
     "axios": "^1.6.8",
-    "framer-motion": "^11.1.7",
+    "framer-motion": "^11.3.17",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
