--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@files-ui/react": "^1.2.4",
     "@hookform/resolvers": "^3.4.0",
     "@nextui-org/card": "^2.0.28",
     "@nextui-org/checkbox": "^2.1.2",
