--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "react-dom": "^18",
     "react-hook-form": "^7.51.4",
     "react-icons": "^5.1.0",
+    "react-multi-date-picker": "^4.5.2",
+    "react-time-picker": "^7.0.0",
+    "styled-components": "^6.1.13",
     "sweetalert": "^2.1.2",
     "use-debounce": "^10.0.0",
     "zod": "^3.23.4"
