--- a/package.json
+++ b/package.json
@@ -20,10 +20,11 @@
     "@nextui-org/select": "^2.2.2",
     "@nextui-org/table": "^2.0.33",
     "axios": "^1.7.7",
+    "eslint-config-next": "^15.0.3",
     "framer-motion": "^11.3.17",
-    "next": "14.2.3",
-    "react": "^18",
-    "react-dom": "^18",
+    "next": "^15.0.3",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-hook-form": "^7.51.4",
     "react-icons": "^5.1.0",
     "react-multi-date-picker": "^4.5.2",
