--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@files-ui/react": "^1.2.4",
     "@hookform/resolvers": "^3.4.0",
+    "@material-tailwind/react": "^2.1.10",
     "@nextui-org/card": "^2.0.28",
     "@nextui-org/checkbox": "^2.1.2",
     "@nextui-org/date-picker": "^2.1.2",
@@ -20,11 +21,10 @@
     "@nextui-org/select": "^2.2.2",
     "@nextui-org/table": "^2.0.33",
     "axios": "^1.7.7",
+    "browserslist": "^4.24.3",
     "eslint-config-next": "^15.0.3",
     "framer-motion": "^11.3.17",
-    "next": "^15.0.3",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "next": "^15.1.2",
     "react-hook-form": "^7.51.4",
     "react-icons": "^5.1.0",
     "react-multi-date-picker": "^4.5.2",
