--- a/package.json
+++ b/package.json
@@ -23,9 +23,12 @@
     "@nextui-org/table": "^2.0.33",
     "axios": "^1.7.7",
     "browserslist": "^4.24.3",
+    "cookies-next": "^6.1.0",
     "eslint-config-next": "^15.0.3",
     "framer-motion": "^11.3.17",
+    "lucide-react": "^0.541.0",
     "next": "^15.1.2",
+    "next-auth": "^5.0.0-beta.29",
     "react-hook-form": "^7.51.4",
     "react-icons": "^5.1.0",
     "react-multi-date-picker": "^4.5.2",
