--- a/package.json
+++ b/package.json
@@ -29,10 +29,13 @@
     "lucide-react": "^0.541.0",
     "next": "^15.1.2",
     "next-auth": "^5.0.0-beta.29",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
     "react-hook-form": "^7.51.4",
     "react-icons": "^5.1.0",
     "react-multi-date-picker": "^4.5.2",
     "react-time-picker": "^7.0.0",
+    "sonner": "^2.0.7",
     "styled-components": "^6.1.13",
     "sweetalert": "^2.1.2",
     "use-debounce": "^10.0.0",
